ingress.uxguide-site.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme # This will attempt to automatically generate a cert.
    acme.cert-manager.io/http01-edit-in-place: "true" # This makes the HTTP01 handler more robust.
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
  labels:
    app: uxguide-site
  name: uxguide-site
  namespace: uxguide
spec: # This wont work
  ingressClassName: "nginx"
  rules:
    - host: uxguide-temp.k8s.epic.com
      http:
        paths:
          - backend:
              service:
                name: uxguide-site # This needs to match an existing service name in the same namespace as this ingress
                port:
                  name: webhttp # This needs to match an existing port name in this service
            path: /
            pathType: Prefix
  tls: # The list of hosts needs to match the rules above for ACME to work
    - hosts:
        - uxguide-temp.k8s.epic.com
      secretName: uxguide-site-cert-manager
